tests/baselines/reference/blockScopedSameNameFunctionDeclarationStrictES5.errors.txt
tests/cases/compiler/blockScopedSameNameFunctionDeclarationStrictES5.ts(4,18): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'.
tests/cases/compiler/blockScopedSameNameFunctionDeclarationStrictES5.ts(6,9): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/blockScopedSameNameFunctionDeclarationStrictES5.ts(9,18): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'.
tests/cases/compiler/blockScopedSameNameFunctionDeclarationStrictES5.ts(11,9): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/blockScopedSameNameFunctionDeclarationStrictES5.ts(14,5): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/blockScopedSameNameFunctionDeclarationStrictES5.ts(17,1): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/blockScopedSameNameFunctionDeclarationStrictES5.ts (6 errors) ====
    "use strict";
    function foo(a: number) {
        if (a === 1) {
            function foo() { } // Error to declare function in block scope
                     ~~~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'.
            foo();
            foo(10); // not ok
            ~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
        }
        else {
            function foo() { } // Error to declare function in block scope
                     ~~~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'.
            foo();
            foo(10); // not ok
            ~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
        }
        foo(10);
        foo(); // not ok - needs number
        ~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    }
    foo(10);
    foo(); // not ok - needs number
    ~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.